syntax = "proto3";

package comment.v1;

option go_package = "github.com/Josy-coder/comment-service/proto/comment/v1;commentv1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service CommentService {
  rpc CreateComment (CreateCommentRequest) returns (CommentResponse);
  rpc GetComment (GetCommentRequest) returns (CommentResponse);
  rpc UpdateComment (UpdateCommentRequest) returns (CommentResponse);
  rpc DeleteComment (DeleteCommentRequest) returns (google.protobuf.Empty);
  rpc ListComments (ListCommentsRequest) returns (ListCommentsResponse);
}

message Comment {
  int32 id = 1;
  string content = 2;
  int32 user_id = 3;
  int32 stream_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateCommentRequest {
  string content = 1;
  int32 user_id = 2;
  int32 stream_id = 3;
}

message GetCommentRequest {
  int32 id = 1;
}

message UpdateCommentRequest {
  int32 id = 1;
  string content = 2;
}

message DeleteCommentRequest {
  int32 id = 1;
}

message ListCommentsRequest {
  optional int32 stream_id = 1;
  optional int32 user_id = 2;
  optional int32 page_size = 3;
  optional int32 page = 4;
}

message CommentResponse {
  Comment comment = 1;
}

message ListCommentsResponse {
  repeated Comment comments = 1;
  int32 total_count = 2;
}